# cobre

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  RELEASE_NOTES.md  analysis-epic-04a-instrumentation.md  assessment-past-inflows-gap.md  assessment.md  claude-assessment-refined.md  claude-web-assessment.md  clippy.toml  cobre-dev-strategy.md  cobre-next-steps.md  codecov.yml  deny.toml  dhat-heap.json  discussion-best-basis-reuse-strategy.md  dist-workspace.toml  docs-review.md  generic_constraints.schema.json  hydros.schema.json  lines.schema.json  non_controllable_factors.schema.json  penalties.schema.json  phase7-assessment.md  phase8-cli-design.md  plan-review-history.md  plan-review.md  pre-release-assessment.md  solver-hot-path-dead-code-analysis.md  spec.md  test_allow  updated-assessment.md  v0.1.0-final-assessment.md
crates/cobre/: Cargo.toml  README.md
crates/cobre-cli/: Cargo.toml  README.md  build.rs
crates/cobre-cli/src/: banner.rs  error.rs  logging.rs  main.rs  policy_io.rs  progress.rs  simulation_io.rs  summary.rs  templates.rs
crates/cobre-cli/src/commands/: broadcast.rs  init.rs  mod.rs  report.rs  run.rs  schema.rs  summary.rs  validate.rs  version.rs
crates/cobre-cli/templates/1dtoy/: config.json  initial_conditions.json  penalties.json  stages.json
crates/cobre-cli/tests/: cli_color.rs  cli_report.rs  cli_run.rs  cli_schema.rs  cli_smoke.rs  cli_validate.rs  init.rs  per_opening_mpi_parity.rs  python_parity_check.rs
crates/cobre-comm/: Cargo.toml  README.md
crates/cobre-comm/src/: factory.rs  ferrompi.rs  lib.rs  local.rs  topology.rs  traits.rs  types.rs
crates/cobre-comm/tests/: factory_tests.rs  local_conformance.rs
crates/cobre-core/: Cargo.toml  README.md
crates/cobre-core/src/: entity_id.rs  error.rs  generic_constraint.rs  initial_conditions.rs  lib.rs  penalty.rs  resolved.rs  scenario.rs  system.rs  temporal.rs  training_event.rs  welford.rs
crates/cobre-core/src/entities/: bus.rs  energy_contract.rs  hydro.rs  line.rs  mod.rs  non_controllable.rs  pumping_station.rs  thermal.rs
crates/cobre-core/src/topology/: cascade.rs  mod.rs  network.rs
crates/cobre-core/tests/: infra_genericity.rs  integration.rs
crates/cobre-emt/: Cargo.toml  README.md
crates/cobre-emt/src/: lib.rs
crates/cobre-flow/: Cargo.toml  README.md
crates/cobre-flow/src/: lib.rs
crates/cobre-io/: Cargo.toml  README.md
crates/cobre-io/schemas/: policy.fbs
crates/cobre-io/src/: broadcast.rs  config.rs  error.rs  initial_conditions.rs  lib.rs  parquet_helpers.rs  penalties.rs  pipeline.rs  report.rs  schema.rs  stages.rs
crates/cobre-io/src/constraints/: bounds.rs  exchange_factors.rs  generic.rs  generic_bounds.rs  mod.rs  ncs_bounds.rs  penalty_overrides.rs
crates/cobre-io/src/extensions/: fpha_hyperplanes.rs  hydro_geometry.rs  mod.rs  production_models.rs
crates/cobre-io/src/output/: convergence_reader.rs  dictionary.rs  error.rs  hydro_models.rs  manifest.rs  mod.rs  parquet_config.rs  policy.rs  provenance.rs  (+7 more)
crates/cobre-io/tests/: defaults_cascade.rs  flatbuffers_schema_conformance.rs  genericity_gate.rs  integration.rs  invariance.rs
crates/cobre-mcp/: Cargo.toml  README.md
crates/cobre-mcp/src/: main.rs
crates/cobre-python/: Cargo.toml  README.md  pyproject.toml
crates/cobre-python/src/: io.rs  lib.rs  model.rs  results.rs  run.rs
crates/cobre-python/tests/: test_errors.py  test_import.py  test_inflow_annual_component_parity.py  test_io.py  test_model.py  test_outputs.py  test_results.py  test_run.py  test_solver_stats_parity.py
crates/cobre-sddp/: Cargo.toml  README.md
crates/cobre-sddp/benches/: backward_stats_gather.rs
crates/cobre-sddp/examples/: dhat_baseline.rs  dump_facp_all_hydros.rs  dump_facp_camargos.rs
crates/cobre-sddp/src/: angular_pruning.rs  backward.rs  backward_pass_state.rs  basis_padding.rs  basis_reconstruct.rs  config.rs  context.rs  convergence.rs  conversion.rs  cut_selection.rs  cut_sync.rs  error.rs  estimation.rs  forward.rs  forward_pass_state.rs  fpha_fitting.rs  generic_constraints.rs  horizon_mode.rs  hydro_models.rs  indexer.rs  inflow_method.rs  lag_transition.rs  lib.rs  lower_bound.rs  lp_builder.rs  noise.rs  policy_export.rs  policy_load.rs  provenance.rs  risk_measure.rs  scaling_report.rs  setup.rs  solver_stats.rs  stage_solve.rs  state_exchange.rs  stochastic_summary.rs  stopping_rule.rs  training.rs  training_output.rs  training_session.rs  (+3 more)
crates/cobre-sddp/tests/: basis_reconstruct_churn.rs  boundary_cuts.rs  canonical_state_strategy.rs  conformance.rs  decomp_integration.rs  determinism.rs  deterministic.rs  estimation_integration.rs  forward_sampler_integration.rs  fpha_computed.rs  fpha_evaporation.rs  inflow_nonnegativity.rs  integration.rs  load_integration.rs  multi_resolution_integration.rs  par_a_lag12_lp_coefficient.rs  parity_hash_d01_d15.rs  pattern_d_integration.rs  simulation_integration.rs  simulation_only.rs  sparse_dense.rs  test_backward_cache_hit_rate.rs  test_backward_cache_reduces_pivots.rs  test_mpi_4rank_basis_broadcast_round_trip.rs  test_mpi_allgatherv_nonuniform_workers.rs  test_mpi_basis_broadcast_large_len.rs  test_mpi_hydro_models_output_path.rs  test_mpi_sync_cuts_invariant.rs  test_mpi_wire_format_version.rs  unified_run_path.rs  v045_regression.rs  warm_start.rs
crates/cobre-solver/: Cargo.toml  README.md  build.rs
crates/cobre-solver/csrc/: highs_wrapper.c  highs_wrapper.h  highs_wrapper_cpp.cpp
crates/cobre-solver/src/: baking.rs  ffi.rs  highs.rs  lib.rs  trait_def.rs  types.rs
crates/cobre-solver/tests/: conformance.rs  ffi_set_basis_non_alien_smoke.rs
crates/cobre-stochastic/: Cargo.toml  README.md
crates/cobre-stochastic/src/: context.rs  error.rs  lib.rs  provenance.rs
crates/cobre-stochastic/tests/: conformance.rs  forward_sampler.rs  halton_integration.rs  lhs_integration.rs  reproducibility.rs  saa_golden_value.rs  sobol_integration.rs
crates/cobre-tui/: Cargo.toml  README.md
crates/cobre-tui/src/: lib.rs
crates/cobre/src/: lib.rs
(+646 files in other folders)
