[workspace]
resolver = "2"
members = [
    "crates/cobre",
    "crates/cobre-core",
    "crates/cobre-io",
    "crates/cobre-stochastic",
    "crates/cobre-solver",
    "crates/cobre-comm",
    "crates/cobre-sddp",
    "crates/cobre-cli",
    "crates/cobre-mcp",
    "crates/cobre-tui",
]
# cobre-python requires a Python interpreter with PyO3 and is built separately
# via maturin. Excluding it from the workspace prevents cargo-dist and
# `cargo test --workspace` from requiring a compatible Python installation.
exclude = [
    "crates/cobre-python",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.86"
license = "Apache-2.0"
repository = "https://github.com/cobre-rs/cobre"
homepage = "https://cobre-rs.github.io/cobre-docs/"
documentation = "https://docs.rs/cobre"
authors = ["Rogerio J. M. Alves <rogerio.alves@cobre.dev>"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[profile.release]
strip = "symbols"

# Opt-in profile for flamegraph/DHAT — keeps line-number debug info so samples
# resolve to source locations. Use with `cargo build --profile profiling` or
# `cargo flamegraph --profile profiling`.
[profile.profiling]
inherits = "release"
debug = 1
strip = "none"

[profile.dist]
inherits = "release"
lto = "thin"
strip = "symbols"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
too_many_arguments = "deny"
