[package]
name = "cobre-cli"
description = "Command-line interface for Cobre power system studies"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["power-systems", "cli", "energy", "sddp", "simulation"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "cobre"
path = "src/main.rs"
doc = false

[dependencies]
cobre-core = { version = "0.0.1", path = "../cobre-core" }
cobre-io = { version = "0.0.1", path = "../cobre-io" }
cobre-sddp = { version = "0.0.1", path = "../cobre-sddp" }
cobre-solver = { version = "0.0.1", path = "../cobre-solver" }
cobre-comm = { version = "0.0.1", path = "../cobre-comm" }
cobre-stochastic = { version = "0.0.1", path = "../cobre-stochastic" }
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
mpi = ["cobre-comm/mpi"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints]
workspace = true
