[package]
name = "cobre-cli"
description = "Command-line interface for Cobre power system studies"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["power-systems", "cli", "energy", "sddp", "simulation"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "cobre"
path = "src/main.rs"
doc = false

[dependencies]
cobre-core = { version = "0.1.0", path = "../cobre-core", features = ["serde"] }
cobre-io = { version = "0.1.0", path = "../cobre-io" }
cobre-sddp = { version = "0.1.0", path = "../cobre-sddp" }
cobre-solver = { version = "0.1.0", path = "../cobre-solver" }
cobre-comm = { version = "0.1.0", path = "../cobre-comm" }
cobre-stochastic = { version = "0.1.0", path = "../cobre-stochastic" }
clap = { version = "4", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
console = "0.16"
indicatif = "0.18"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
mpi = ["cobre-comm/mpi"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# Override unsafe_code to "allow" for this crate because initializing LP solver
# environment variables (HIGHS_PARALLEL, OMP_NUM_THREADS) via std::env::set_var
# requires an unsafe block in Rust 2024. The calls occur at process startup,
# before the rayon thread pool is built, so no concurrent environment access is
# possible. All other workspace lints are manually replicated here since Cargo
# does not permit combining `lints.workspace = true` with per-lint overrides.
[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
