[package]
name = "cobre-cli"
description = "Command-line interface for Cobre power system studies"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["power-systems", "cli", "energy", "sddp", "simulation"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "cobre"
path = "src/main.rs"
doc = false

[dependencies]
cobre-core = { version = "0.3.2", path = "../cobre-core", features = ["serde"] }
cobre-io = { version = "0.3.2", path = "../cobre-io", features = ["schema"] }
cobre-sddp = { version = "0.3.2", path = "../cobre-sddp" }
cobre-solver = { version = "0.3.2", path = "../cobre-solver" }
cobre-comm = { version = "0.3.2", path = "../cobre-comm" }
cobre-stochastic = { version = "0.3.2", path = "../cobre-stochastic" }
clap = { version = "4", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
console = "0.16"
indicatif = "0.18"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[features]
mpi = ["cobre-comm/mpi"]

[dev-dependencies]
assert_cmd = "2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
predicates = "3"
tempfile = "3"

[lints]
workspace = true
