[package]
name = "cobre-comm"
description = "Pluggable communication backend abstraction for the Cobre ecosystem (MPI, TCP, shared-memory, local)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["mpi", "distributed", "communication", "hpc", "parallelism"]
categories = ["science", "network-programming"]

[dependencies]
thiserror = "2"
ferrompi = { version = "0.4.0", optional = true }

[features]
mpi = ["dep:ferrompi"]
numa = ["mpi", "ferrompi/numa"]

# Override unsafe_code to "allow" for this crate because FerrompiBackend requires
# `unsafe impl Send` and `unsafe impl Sync` to satisfy the Communicator trait bounds.
# ferrompi::Mpi is !Send + !Sync (PhantomData<*const ()>), but the RAII pattern
# guarantees construction and finalization happen on the same thread, making the
# unsafe impl sound. All other workspace lints are manually replicated here since
# Cargo does not permit combining `lints.workspace = true` with per-lint overrides.
[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
too_many_arguments = "deny"
