[package]
name = "cobre-io"
description = "Case directory loading and validation for the Cobre power systems ecosystem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["power-systems", "energy", "io", "validation"]
categories = ["science", "parser-implementations"]

[dependencies]
cobre-core = { version = "0.0.1", path = "../cobre-core", features = ["serde"] }
arrow = { version = "55", default-features = false, features = ["prettyprint"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
parquet = { version = "55", default-features = false, features = ["arrow", "zstd"] }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
parquet = { version = "55", default-features = false, features = ["arrow", "zstd"] }
tempfile = "3"

[lints]
workspace = true
