[package]
name = "cobre-io"
description = "Case directory loading and validation for the Cobre power systems ecosystem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["power-systems", "energy", "io", "validation"]
categories = ["science", "parser-implementations"]

[features]
schema = ["dep:schemars"]

[dependencies]
cobre-core = { version = "0.3.0", path = "../cobre-core", features = ["serde"] }
cobre-stochastic = { version = "0.3.0", path = "../cobre-stochastic" }
arrow = { version = "58", default-features = false, features = ["prettyprint"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
parquet = { version = "58", default-features = false, features = ["arrow", "zstd"] }
postcard = { version = "1", features = ["alloc"] }
schemars = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
flatbuffers = "25"

[dev-dependencies]
parquet = { version = "58", default-features = false, features = ["arrow", "zstd"] }
tempfile = "3"

[lints]
workspace = true
