[package]
name = "cobre-io"
description = "Case directory loading and validation for the Cobre power systems ecosystem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["power-systems", "energy", "io", "validation"]
categories = ["science", "parser-implementations"]

[features]
schema = ["dep:schemars"]
## Opt-in to the slow test suite (no slow tests currently in this crate;
## declaration reserved for workspace consistency).
slow-tests = []
## Opt-in to the FlatBuffers schema-conformance tests in
## `tests/flatbuffers_schema_conformance.rs`. Requires `flatc` on PATH
## (or `FLATC` env var) at test run time. Not part of the default test
## suite because `flatc` is not a build-time dependency of cobre and is
## not always available in CI.
flatc-conformance = []

[dependencies]
cobre-core = { version = "0.5.1", path = "../cobre-core", features = ["serde"] }
cobre-stochastic = { version = "0.5.1", path = "../cobre-stochastic" }
arrow = { version = "58", default-features = false, features = ["prettyprint"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
parquet = { version = "58", default-features = false, features = ["arrow", "zstd"] }
postcard = { version = "1", features = ["alloc"] }
schemars = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
flatbuffers = "25"

[dev-dependencies]
parquet = { version = "58", default-features = false, features = ["arrow", "zstd"] }
tempfile = "3"

[lints]
workspace = true
