[package]
name = "cobre-mcp"
description = "Model Context Protocol (MCP) server exposing Cobre operations as tools and resources for AI coding assistants"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["mcp", "ai", "server", "power-systems", "energy"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "cobre-mcp"
path = "src/main.rs"

[dependencies]

[lints]
workspace = true
