[package]
name = "cobre-python"
description = "Python bindings for the Cobre power systems solver — import cobre from Python scripts and Jupyter notebooks"
version = "0.4.2"
edition = "2024"
rust-version = "1.86"
license = "Apache-2.0"
repository = "https://github.com/cobre-rs/cobre"
homepage = "https://cobre-rs.github.io/cobre-docs/"
authors = ["Rogerio J. M. Alves <rogerio.alves@cobre.dev>"]
readme = "README.md"
keywords = ["python", "bindings", "pyo3", "power-systems", "energy"]
categories = ["science", "api-bindings"]

[lib]
name = "cobre"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py312"] }
cobre-core = { version = "0.4.2", path = "../cobre-core" }
cobre-io = { version = "0.4.2", path = "../cobre-io" }
cobre-sddp = { version = "0.4.2", path = "../cobre-sddp" }
cobre-stochastic = { version = "0.4.2", path = "../cobre-stochastic" }
cobre-solver = { version = "0.4.2", path = "../cobre-solver" }
cobre-comm = { version = "0.4.2", path = "../cobre-comm" }
rayon = "1"
arrow = { version = "58", default-features = false, features = ["ipc"] }
parquet = { version = "58", default-features = false, features = ["arrow"] }
serde_json = "1"

# PyO3 proc macros generate unsafe code internally. The workspace forbids unsafe_code,
# but this crate must override that lint to allow it, because the #[pymodule] and
# #[pyclass] macros emit unsafe code that we do not write ourselves.
[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
