[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "cobre"
dynamic = ["version"]
description = "High-performance SDDP solver for hydrothermal dispatch — Python bindings for the Cobre ecosystem"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Rogerio J. M. Alves", email = "rogerio.alves@cobre.dev" },
]
readme = "README.md"
keywords = ["sddp", "optimization", "power-systems", "energy", "hydrothermal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://cobre-rs.github.io/cobre-docs/"
Repository = "https://github.com/cobre-rs/cobre"
Documentation = "https://cobre-rs.github.io/cobre-docs/"
"Bug Tracker" = "https://github.com/cobre-rs/cobre/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "cobre"

[tool.pytest.ini_options]
testpaths = ["tests"]
