[package]
name = "cobre-sddp"
description = "Stochastic Dual Dynamic Programming (SDDP) for hydrothermal dispatch and energy planning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["sddp", "hydrothermal", "dispatch", "optimization", "energy"]
categories = ["science", "simulation", "mathematics"]

[dependencies]
cobre-core = { version = "0.4.2", path = "../cobre-core" }
cobre-solver = { version = "0.4.2", path = "../cobre-solver" }
cobre-comm = { version = "0.4.2", path = "../cobre-comm" }
cobre-stochastic = { version = "0.4.2", path = "../cobre-stochastic" }
cobre-io = { version = "0.4.2", path = "../cobre-io" }
chrono = { version = "0.4", default-features = false, features = ["std"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
arrow = { version = "58", default-features = false, features = ["prettyprint"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
parquet = { version = "58", default-features = false, features = ["arrow", "zstd"] }
rand = "0.10"
rand_distr = "0.6"
serde_json = "1"
tempfile = "3"

[lints]
workspace = true
