[package]
name = "cobre-stochastic"
description = "Stochastic process models for power systems — PAR(p), scenario generation, correlated sampling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["stochastic", "time-series", "autoregressive", "scenarios", "sampling"]
categories = ["science", "simulation", "mathematics"]

[dependencies]
cobre-core = { version = "0.4.1", path = "../cobre-core" }
chrono = { version = "0.4", default-features = false, features = ["std"] }
siphasher = "1"
rand = "0.10"
rand_distr = "0.6"
rand_pcg = "0.10"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
chrono = "0.4"

[lints]
workspace = true
