[package]
name = "cobre-tui"
description = "Reserved crate name. The Cobre terminal UI is not yet implemented; depend on cobre-cli for command-line interaction with Cobre."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["cobre", "reserved"]
categories = ["science"]

[dependencies]

[lints]
workspace = true
